--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,500;1,700&family=Oswald:wght@400;700&family=Pinyon+Script&display=swap');
+a {
+ text-decoration: none;
+}
 
 /* Background */
 
