--- a/src/App.css
+++ b/src/App.css
@@ -89,6 +89,7 @@ a {
 .Information--Quote {
  font-size: 24px;
  font-family: 'Open Sans', sans-serif;
+ justify-content: center;
  font-weight: 400;
  margin: 0;
  max-width: 633px;
@@ -103,6 +104,7 @@ a {
 
 .Information--Buttons-Row {
  display: flex;
+ justify-content: center;
  flex-wrap: wrap;
  margin: 10% 0;
  gap: 10px 25px;
@@ -215,9 +217,7 @@ a {
  .Background--SmallGear--image {
   opacity: 0.25;
  }
- .Information--Buttons-Row {
-  justify-content: center;
- }
+
  .ProjectGallery {
   justify-content: center;
  }
@@ -226,6 +226,9 @@ a {
  .Footer--Location {
   margin: 0;
   font-size: 12px;
+ }
+ .Card {
+    margin: 25px -50px;
  }
 
  .Footer {
